@@ -90,6 +90,8 @@ THE SQUIRRELMAIL TEAM
                  Laurent Pozza <laurent at pozza.org>
                  Intri Geri <intrigeri at boum.org>
 
+   Georgian      Tamuna <tchangiani at saba.edu.ge>
+
    German        Roland Bauerschmidt <rb at debian.org>
                  Ralf Hildebrandt <Ralf.Hildebrandt at charite.de> (coordinator)
                  Klaus Brunner <klaus at winf.at>
